tests/fixtures/LatestTests/VariableDeclarationTests/errors/uninitialized_use_before_declare_deci.fg
/; EXPECT_ERROR: VariableNotFound
print(x, "\n")
var x:deci = 5.5

